--- a/html/pfappserver/lib/pfappserver/I18N/fr.po
+++ b/html/pfappserver/lib/pfappserver/I18N/fr.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-05-31 19:17+0000\n"
+"PO-Revision-Date: 2017-06-05 13:49+0000\n"
 "Last-Translator: oeufdure <fdurand@inverse.ca>\n"
 "Language-Team: French (http://www.transifex.com/inverse/packetfence/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -7609,7 +7609,7 @@ msgstr "Le facteur coût à appliquer au hachage de mot de passe le cas échéan
 
 # html/pfappserver/root/admin/wrapper.tt
 msgid "The database is in readonly mode. Not all functionality is available."
-msgstr "La base de donnée est mode lecture seule. Toutes les foncitonnalités ne sont pas disponible."
+msgstr "La base de donnée est en mode lecture seule. Toutes les fonctionnalités ne sont pas disponibles."
 
 # /usr/local/fingerbank/conf/fingerbank.conf.doc (mysql.database)
 msgid "The database name in MySQL"
