--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -14,7 +14,7 @@ This guide has been created to give a quick start to install active/active clust
 Assumptions
 -----------
 * You have at least three (3) installed PacketFence (v7+) servers
-* Servers are running RHEL / CentOS 7 / Debian jessie
+* Servers are running RHEL / CentOS 7 / Debian Jessie
 * Servers have identical copies for network interfaces
 * Servers network interfaces are on the same layer 2 network
 * Servers hostnames must be resolvable via DNS resolution or be in the hostfile (`/etc/hosts`) of each server.
