--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -701,7 +701,7 @@ Import from CSV
 ^^^^^^^^^^^^^^^
 From PacketFence 7.3 and onwards, you have the possibility to import switches from a CSV file.
 
-To use this functionality, follow those guidelines. The following information in this particular order are necessary: "description, IP or MAC, switch group". Each line which has all three will create an entry in the switch list. If an entry with one provided IP/MAC already exist it will not be added. You MUST create switches group before.
+The CSV must look like: "description, IP or MAC, switch group". If an entry with one provided IP/MAC already exist it will not be added. You MUST create switches group before.
 
 Working modes
 ^^^^^^^^^^^^^
