--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -18,12 +18,15 @@ New Features
 ++++++++++++
 
 * Added a RADIUS only mode to PacketFence.
+* Added the possibility to import switches from a CSV file.
 
 Enhancements
 ++++++++++++
 
 * Display vlan in locationlog view
+* Allow the timezone to be selected.
 * Add a task count jitter to reduce the chance that pfqueue workers exit at the same time.
+* Updated ACE text editor to version 1.2.8
 
 Bug Fixes
 +++++++++
