--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -27,6 +27,7 @@ Enhancements
 * Allow the timezone to be selected.
 * Add a task count jitter to reduce the chance that pfqueue workers exit at the same time.
 * Updated ACE text editor to version 1.2.8
+* Allow the ability reset the search forms for nodes and users (PR #2555)
 
 Bug Fixes
 +++++++++
