NEWS file for #2476

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -29,6 +29,7 @@ Enhancements
 * Updated ACE text editor to version 1.2.8
 * Allow the ability reset the search forms for nodes and users (PR #2555)
 * Allow saving configuration files in readonly mode except violation, switches, role (#2464) (PR #2566)
+* Added parameter to have extended descriptions in the custom reports
 
 Bug Fixes
 +++++++++
