--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -39,6 +39,7 @@ Bug Fixes
 * httpd.dispatcher now logs in httpd.dispatcher.log (PR #2557)
 * Fix incorrect inline sub type detection
 * Fix ipset update with the incorrect ip address (the old one)
+* Fix missing confirm prompt when restarting all services via the admin interface (#2365) (PR #2571)
 
 
 Version 7.2.0 released on 2017-07-10
