NEWS file for #2583

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -43,6 +43,7 @@ Bug Fixes
 * Fix missing confirm prompt when restarting all services via the admin interface (#2365) (PR #2571)
 * Fix the database has gone away error in services (#2580) (PR #2585)
 * Fixes violation definition sync when removing a violation from the config
+* Fixes incorrect Connection-Type when using EAP-TTLS (#2582)
 
 Version 7.2.0 released on 2017-07-10
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
