--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -32,6 +32,8 @@ Enhancements
 * Allow saving configuration files in readonly mode except violation, switches, role (#2464) (PR #2566)
 * Added parameter to have extended descriptions in the custom reports
 * Add support for SSL and StartTLS for sending mail
+* Allow to ignore self signed cert errors for nessus 6 (PR #2568)
+* Allow violations to be triggered by nessus 6 scanner (PR #2568)
 
 Bug Fixes
 +++++++++
